--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h3 {
 }
 
 .three {
-  background: linear-gradient(to right top, #df65b0, #eb6c81);
+    background: linear-gradient(to right top, #df65ac, #eb6c6c);
 }
 
 .user img {
@@ -51,6 +51,13 @@ h3 {
   height:100px;
   width:100px;
 } 
+
+.link img {
+  border-radius: 50%;
+  height:50px;
+  width:50px;
+}
+
 .container {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
@@ -158,7 +165,7 @@ h3 {
 }
 
 .games {
-  margin: 5rem;
+  margin-left: 5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -190,7 +197,11 @@ h3 {
   content: "";
   width: 100%;
   height: 100%;
-  background: rgb(236, 236, 236);
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.1)
+  );
   position: absolute;
   left: 60%;
 }
@@ -205,4 +216,44 @@ h3 {
   background: linear-gradient(to right top, #65dfc9, #6cdbeb);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.weather-container {
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.location {
+  height: 30vh;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: 20vh;
+}
+
+.temperature {
+  height: 30vh;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: 20vh;
+}
+
+.degree-section {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.degree-section span {
+  margin: 10px;
+  font-size: 30px
+}
+
+.degree-section h2 {
+  font-size: 40px;
 }
